--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task-2</title>
+    <title>Product Listing</title>
     <link rel="shortcut icon" href="icons/bapu_favicon.png">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
     <style>
